# Fractales

./: .isort.cfg  LICENSE  Pipfile  README.md  main.py  pyproject.toml
Barnsley/: README.md  barnsley.py  cartesian.py
Mandelbrot/: Args.py  README.md  borrador.txt  cartesian.py  mandelbrot.py
Sierpinski/: README.md  sierpinski.py
Sierpinski/Images/: Args.py  sierpinski.py
fractals/: __init__.py  barnsley.py  cartesian.py  color_data.py  mandelbrot.py  schemas.py  sierpinski.py  utils.py
