[tool.poetry]
name = "fractales"
version = "0.1.0"
description = "This is a solution that allows you to generate various fractals in an efficient way."
authors = ["Luis Papiernik <lpapiernik24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.2.0"
numpy = "^1.23.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
